# RNTuple-I-O-Config

./: .clangd  .gitignore  CMakeLists.txt  README.md  WireDict.cxx  WireDict_rdict.pcm  entry_counts_report.md  test_error_handling.cpp  test_progressive_output.cpp  verify_data_counts.cpp
Presentation/: presentation.aux  presentation.fdb_latexmk  presentation.fls  presentation.nav  presentation.out  presentation.tex  presentation.toc
Presentation/Figures/: Figures.drawio
experiments/: configurationsFillCount.txt  log.txt
include/: Hit.hpp  HitWireGenerators.hpp  HitWireReaders.hpp  HitWireStat.hpp  HitWireWriterHelpers.hpp  HitWireWriters.hpp  ProgressiveTablePrinter.hpp  ReaderResult.hpp  SOALinkDef.h  TopBatchRow.hpp  TopBatchRowSOA.hpp  UnionRow.hpp  UnionRowSOA.hpp  Utils.hpp  Wire.hpp  WireLinkDef.h  WriterResult.hpp  updatedHitWireReaders.hpp  updatedHitWireWriterHelpers.hpp  updatedHitWireWriters.hpp  updatedLinkDef.h  updatedVisualization.hpp  visualization.hpp
src/: Hit.cpp  HitWireGenerators.cpp  HitWireReaders.cpp  HitWireStat.cpp  HitWireWriterHelpers.cpp  HitWireWriters.cpp  ProgressiveTablePrinter.cpp  Utils.cpp  Wire.cpp  main.cpp  updatedHitWireReaders.cpp  updatedHitWireWriterHelpers.cpp  updatedHitWireWriters.cpp  updatedVisualization.cpp  visualization.cpp
tests/: CMakeLists.txt  gen_test_rootfile.cpp  test_split_range.cpp  test_split_range_by_clusters.cpp
